Update 26. Random Number Generator (RNG).md

--- a/26. Random Number Generator (RNG).md
+++ b/26. Random Number Generator (RNG).md
@@ -46,8 +46,12 @@ The abbreviations given in Column Access are explained in Section Access Types f
 ## 26.6 Register
 ### Register 26.1. LPPERI_RNG_DATA_REG (0x600B_2808)
 
-LPPERI_RNG_DATA 0x00000000 
+LPPERI_RNG_DATA 
+
+0x00000000 
+
 31 to 0 (Reset)
- LPPERI_RNG_DATA Random number source. (RO)
+
+LPPERI_RNG_DATA Random number source. (RO)
 
 
