Update 26. Random Number Generator (RNG).md
Markdown (Doc extract)

--- a/26. Random Number Generator (RNG).md
+++ b/26. Random Number Generator (RNG).md
@@ -14,13 +14,15 @@ These true random numbers are generated based on the thermal noise in the system
 - **Thermal noise** comes from the high-speed ADC or SAR ADC or both. Whenever the high-speed ADC or SAR ADC is enabled, bit streams will be generated and fed into the random number generator through an XOR logic gate as random seeds.
 - **RC_FAST_CLK** is an asynchronous clock source and it increases the RNG entropy by introducing circuit metastability.
 
-![Noise Source](Figure 26-1. Noise Source)
+![Noise Source](https://github.com/MicroControleurMonde/ESP32-C6_RNG/blob/main/Misc/Figure%2026-1.%20Noise%20Source.png))
 
 When there is noise coming from the SAR ADC, the random number generator is fed with a 2-bit entropy in one clock cycle of RC_FAST_CLK, which is generated from an internal 
 RC oscillator (see Chapter 8 Reset and Clock for details). Thus, it is advisable to read the `LPPERI_RNG_DATA_REG` register at a maximum rate of 1 MHz to obtain the maximum 
-entropy. When there is noise coming from the high-speed ADC, the random number generator is fed with a 2-bit entropy in one APB clock cycle, which is normally 80 MHz. 
-Thus, it is advisable to read the `LPPERI_RNG_DATA_REG` register at a maximum rate of 5 MHz to obtain the maximum entropy. A data sample of 2 GB, which is read from the random
-number generator at a rate of 5 MHz with only the high-speed ADC being enabled, has been tested using the Dieharder Random Number Testsuite (version 3.31.1). 
+entropy. 
+
+When there is noise coming from the high-speed ADC, the random number generator is fed with a 2-bit entropy in one APB clock cycle, which is normally 80 MHz. Thus, it is advisable to read the `LPPERI_RNG_DATA_REG` register at a maximum rate of 5 MHz to obtain the maximum entropy.
+
+A data sample of 2 GB, which is read from the random number generator at a rate of 5 MHz with only the high-speed ADC being enabled, has been tested using the Dieharder Random Number Testsuite (version 3.31.1). 
 The sample passed all tests.
 
 ## 26.4 Programming Procedure
@@ -46,11 +48,7 @@ The abbreviations given in Column Access are explained in Section Access Types f
 ## 26.6 Register
 ### Register 26.1. LPPERI_RNG_DATA_REG (0x600B_2808)
 
-LPPERI_RNG_DATA 
-
-0x00000000 
-
-31 to 0 (Reset)
+![Register](https://github.com/MicroControleurMonde/ESP32-C6_RNG/blob/main/Misc/Register%2026.1.%20LPPERI_RNG_DATA_REG%20(0x600B_2808).png)
 
 LPPERI_RNG_DATA Random number source. (RO)
 
